# dragon-dashboardv2

./: .editorconfig  .env.example  .gitignore  PRODUCT.md  README.md  design-qa.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  errors.py  extensions.py  logging_config.py  media.py  middleware.py  mytv.py
app/admin/: __init__.py  control_center.py  routes.py
app/ai/: __init__.py  routes.py  services.py
app/auth/: __init__.py  cli.py  forms.py  models.py  routes.py
app/books/: __init__.py  models.py  repositories.py  routes.py  services.py
app/chess/: __init__.py  models.py  repositories.py  routes.py  services.py
app/core/: __init__.py  routes.py
app/german/: __init__.py  models.py  routes.py  services.py
app/history/: __init__.py  models.py  routes.py  services.py
app/migration/: __init__.py  cli.py  inventory.py  legacy.py
app/movies/: __init__.py  external_library.py  integrations.py  models.py  providers.py  public.py  repositories.py  routes.py  services.py
app/mytv/: __init__.py  cache.py  health.py  models.py  routes.py  services.py  streaming.py
app/playback/: __init__.py  models.py  routes.py  runtime.py  services.py  subtitles.py  webtorrent-helper.mjs
app/reading/: __init__.py  models.py  providers.py  repositories.py  routes.py  services.py  text.py
app/services/: __init__.py  github_sync.py  m3u.py  notion_media.py  (+3 more)
scripts/: check_tracked_secrets.py
tests/: conftest.py  test_api.py  test_m3u.py  test_media.py  test_streaming.py
(+146 files in other folders)
