[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-v2"
version = "0.11.0"
description = "A private, local-first personal workspace."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Flask>=3.1,<4",
  "Flask-Login>=0.6,<1",
  "Flask-Migrate>=4,<5",
  "Flask-SQLAlchemy>=3.1,<4",
  "Flask-WTF>=1.2,<2",
  "python-dotenv>=1,<2",
  "SQLAlchemy>=2.0,<3",
  "Werkzeug>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.53,<2",
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "pytest-playwright>=0.7,<1",
  "ruff>=0.12,<1",
]
production = ["gunicorn>=23,<24"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "browser: browser-based accessibility and responsive checks",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S107"]
